...
                    Icon(
                        painter = painterResource(id = com.multithrifter.ui.R.drawable.ic_add),
                        contentDescription = null,
                        tint = Color.White,
                        modifier = Modifier
                            .size(24.dp)
                            .testTag("add_account_icon"),
                    )
                }
            }
        }
        Row(
            modifier = Modifier
...
) {
    Row(
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.SpaceBetween,
        modifier = modifier
            .padding(16.dp)
            .testTag("account_item"),
    ) {
        Text(
            text = account.name,
            maxLines = 1,
            overflow = TextOverflow.Ellipsis,
            style = MaterialTheme.typography.body1,
...
