...
        modifier = Modifier.fillMaxSize(),
    ) { paddingValues ->
        LazyColumn(
            modifier = Modifier
                .fillMaxSize()
                .padding(paddingValues)
                .testTag("currencies_list")
        ) {
            itemsIndexed(state.currencies) { index, currency ->
                CurrencyItem(
                    currency = currency,
                    isSelected = currency == state.selectedCurrency,
                    onSelectCurrency = { onEvent(CurrencySelected(it)) },
...
